teamoneproject/deployment/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamoneapp
  namespace: dev
spec:
  selector:
    matchLabels:
      app: react-gke
  replicas: 1
  template:
    metadata:
      labels:
        app: react-gke
    spec:
      containers:
        - name: react-gke-backend-container
          image: "gcr.io/gke-training-358914/react-app:v1"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.2"
          ports:
            - containerPort: 80
              protocol: TCP
