teamoneproject/deployment/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-gke-service
  namespace: dev
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: react-gke
  type: NodePort
